tests/ui/const-generics/generic_const_exprs/non_local_anon_const_diagnostics.stderr
error[E0308]: mismatched types
  --> $DIR/non_local_anon_const_diagnostics.rs:12:43
   |
LL |     let _: anon_const_non_local::Foo<2> = anon_const_non_local::foo::<M>();
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `2`, found `_`
   |
   = note: expected constant `2`
              found constant `_`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
